# contextforge

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: ADR-001-modular-monolith-clean-architecture.md  ADR-002-postgresql-transactional-database.md  ADR-003-asynchronous-python-stack.md  ADR-004-qdrant-redis-minio-infrastructure.md  ADR-005-organization-multi-tenancy.md  ADR-006-scoped-rbac.md  ADR-007-development-identity.md  ADR-008-append-only-audit.md
docs/architecture/: overview.md
docs/development/: local-setup.md
infrastructure/docker/: README.md
infrastructure/minio/: create-bucket.sh
infrastructure/monitoring/: README.md
infrastructure/postgres/init/: 01-extensions.sql
migrations/: README.md  env.py  script.py.mako
migrations/versions/: 20260723_0001_create_system_metadata.py  20260723_0002_identity_and_knowledge_domain.py  20260723_0003_documents.py  20260723_0004_document_parses.py  20260723_0005_document_chunks.py  20260723_0006_document_chunk_embeddings.py  20260723_0007_ingestion_jobs.py
scripts/: bootstrap_dev.py  docker-entrypoint.sh  seed_system_data.py
src/contextforge/: __init__.py  main.py
src/contextforge/api/: __init__.py
src/contextforge/api/dependencies/: identity.py  pagination.py  providers.py
src/contextforge/api/exception_handlers/: __init__.py
src/contextforge/api/middleware/: __init__.py  correlation.py  request_logging.py
src/contextforge/api/routers/: __init__.py  audit.py  customers.py  documents.py  health.py  ingestion_jobs.py  knowledge_spaces.py  memberships.py  organizations.py  projects.py  roles.py  system.py  users.py
src/contextforge/api/schemas/: __init__.py  audit.py  common.py  customers.py  documents.py  errors.py  health.py  ingestion.py  knowledge_spaces.py  memberships.py  organizations.py  projects.py  roles.py  system.py  users.py
src/contextforge/application/: __init__.py  pagination.py
src/contextforge/application/commands/: __init__.py
src/contextforge/application/context/: request_context.py
src/contextforge/bootstrap/: __init__.py  app_factory.py  lifespan.py
src/contextforge/domain/: __init__.py
src/contextforge/infrastructure/: __init__.py
src/contextforge/shared/: __init__.py
src/contextforge/workers/: ingestion_worker.py
tests/: conftest.py
tests/api/: conftest.py  test_customers_api.py  test_document_chunking_api.py  test_document_embeddings_api.py  test_document_parsing_api.py  test_documents_api.py  test_error_paths_api.py  test_ingestion_jobs_api.py  test_lifecycle_api.py  test_missing_identity.py  test_system_info_api.py  test_tenant_isolation_api.py
tests/architecture/: test_layer_boundaries.py
tests/integration/: conftest.py  test_health_endpoints.py  test_migrations.py  test_repository_filters.py  test_system_metadata_repository.py
tests/integration/audit/: test_audit_persistence.py
tests/integration/documents/: test_document_lifecycle.py
tests/integration/identity/: test_bootstrap_idempotency.py
tests/integration/tenancy/: test_tenant_isolation.py
tests/security/: test_production_disables_development_identity.py  test_restricted_knowledge_space_access.py  test_role_headers_ignored.py
tests/unit/: test_api_endpoints.py  test_correlation.py  test_exception_handlers.py  test_health_service.py  test_infrastructure_clients.py  test_logging_and_settings_extra.py  test_ready_endpoint.py  test_settings.py  test_system_info_service.py  test_system_metadata_entity.py
tests/unit/authorization/: test_request_context.py  test_role_assignment_scope.py
tests/unit/documents/: test_document_chunker.py  test_document_parsers.py  test_embeddings.py
tests/unit/domain/: test_audit_event.py  test_document_entity.py  test_pagination.py  test_status_rules.py  test_value_objects.py
tests/unit/identity/: test_development_identity.py
tests/unit/ingestion/: __init__.py  test_ingestion_job_entity.py  test_ingestion_queue_and_failures.py
(+269 files in other folders)
