[project]
name = "contextforge"
version = "0.1.0"
description = "ContextForge — Multilingual Enterprise Knowledge Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
authors = [{ name = "ContextForge Contributors" }]
keywords = ["enterprise", "knowledge", "fastapi", "rag"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "httpx>=0.28.0",
  "redis>=5.2.0",
  "qdrant-client>=1.12.0",
  "minio>=7.2.0",
  "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.9.0",
  "mypy>=1.14.0",
  "pre-commit>=4.0.0",
  "types-redis>=4.2.0",
]

[project.scripts]
contextforge = "contextforge.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/contextforge"]

[tool.uv]
package = true

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "S",
  "ASYNC",
  "SIM",
  "RUF",
  "PTH",
  "T20",
]
ignore = [
  "S101", # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]
"migrations/**/*.py" = ["N999"]
# CLI scripts intentionally print human-readable output to stdout/stderr.
"scripts/**/*.py" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
mypy_path = "src"
packages = ["contextforge"]
plugins = []

[[tool.mypy.overrides]]
module = ["minio.*", "qdrant_client.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "unit: Unit tests that do not require external services",
  "integration: Integration tests that require infrastructure services",
  "architecture: Architecture boundary and dependency tests",
  "authorization: Tests covering RBAC/permission/scope enforcement",
  "security: Tests covering security-sensitive behavior (identity, tenancy)",
  "api: End-to-end HTTP API tests exercised through the FastAPI test client",
]
addopts = [
  "--strict-markers",
  "--strict-config",
  "-ra",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["contextforge"]
# The FastAPI TestClient (via httpx/anyio) runs the ASGI app's async code in a
# background thread (an anyio blocking portal), not the main test thread, so
# "thread" is required. SQLAlchemy's asyncio extension additionally bridges
# its (fundamentally sync) Core execution engine to async DBAPI drivers via
# greenlet switches on that same thread, which the default tracer can't
# follow either -- "greenlet" is required too, or entire service/repository
# layers silently report as uncovered despite executing correctly.
concurrency = ["thread", "greenlet"]
omit = [
  "*/tests/*",
  "*/migrations/*",
  "*/main.py",
  "*/application/ports/*",
  "*/api/schemas/errors.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "\\.\\.\\.",
]
